--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,13 @@
   "devDependencies": {
     "@types/node": "^12.7.12",
     "@types/react": "^16.9.6",
+    "@typescript-eslint/eslint-plugin": "^2.4.0",
+    "@typescript-eslint/parser": "^2.4.0",
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "prettier": "^1.18.2",
     "typescript": "^3.6.4"
   }
 }
