--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "date-fns": "^2.4.1",
     "next": "9.1.1",
     "react": "16.10.2",
     "react-dom": "16.10.2",
