--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,9 @@
     "@zeit/next-css": "^1.0.1",
     "date-fns": "^2.4.1",
     "faker": "^4.1.0",
-    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "next": "9.1.1",
+    "numbro": "^2.1.2",
     "react": "16.10.2",
     "react-dates": "^21.2.1",
     "react-dom": "16.10.2",
