--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "jest": "^24.9.0",
+    "jest-css-modules": "^2.1.0",
     "prettier": "^1.18.2",
     "react-test-renderer": "^16.10.2",
     "typescript": "^3.6.4"
